# rusty_taocp

./: Cargo.toml
src/: algorithm_1_1_e.rs  lib.rs
